--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
 <string name="translations">En Español:</string>
 <string name="region">Región</string>
 <string name="subregion">Subregion</string>
+<string name="continents">Continentes</string>
 <string name="population">Habitantes: %d</string>
 <string name="fifa">Fifa</string>
 <string name="error_showing_country_not_found">Error showing country, country not found</string>
@@ -23,6 +24,7 @@
 <string name="email_is_not_valid">Email is not valid</string>
 <string name="password_must_not_be_empty">Password must not be empty</string>
 <string name="password_do_not_match">Password do not match</string>
-    <string name="country_map_attribute">country map</string>
-    <string name="country_flag_attribute">country flag attribute</string>
+<string name="country_map_attribute">country map</string>
+<string name="country_flag_attribute">country flag attribute</string>
+<string name="coat">Coat</string>
 </resources>
