--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Capitales</string>
+    <string name="country">País</string>
     <string name="borders">Limitrofes</string>
     <string name="area">Superficie: %.2f</string>
     <string name="translations">En Español:</string>
